--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "graphqldemo",
   "version": "1.0.0",
   "description": "Simple graphql server demo",
-  "main": "server.ts",
+  "main": "src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.ts",
@@ -39,14 +39,15 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^14.5.4"
+    "graphql": "^14.5.4",
+    "mongoose": "^5.6.12"
   },
   "devDependencies": {
     "@types/node": "^12.7.4",
-    "eslint": "^6.3.0",
     "eslint-plugin-import": "^2.18.2",
     "nodemon": "^1.19.2",
     "ts-node": "^8.3.0",
+    "tslint": "^5.19.0",
     "typescript": "^3.6.2"
   }
 }
